--- a/Simulation/create_simulation_data.ipynb
+++ b/Simulation/create_simulation_data.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "setwd('~/GitHub/Wang/scGCO/')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -38,10 +27,11 @@
     }
    ],
    "source": [
+    "#using trendsceek sim\n",
     "set.seed(12346)\n",
     "pp=sim_pois(1000000)  ## number of cells\n",
     "\n",
-    "low_expr=sample(1:10,100,replace=T)  # 随机抽样，设置抽样次数---number of genes\n",
+    "low_expr=sample(1:10,100,replace=T)\n",
     "high_expr=sample(20:50,100,replace=T)\n",
     "\n",
     "pp=add_markdist_step(pp,low_expr,high_expr)"
@@ -375,7 +365,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
