Simulate bigdata and compare computation performance

--- a/Simulation/spatialDE_simulate.ipynb
+++ b/Simulation/spatialDE_simulate.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -55,7 +55,7 @@
       "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/SpatialDE/base.py:278: RuntimeWarning: invalid value encountered in double_scalars\n",
       "  max_ll = -0.5 * ( n * np.log(max_s2_e_hat) + sum1 / max_s2_e_hat + n * np.log(2 * np.pi) )\n",
       "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 0.051s\n",
+      "INFO:root:Done: 0.041s\n",
       "INFO:root:Fitting gene models\n",
       "INFO:root:Model 1 of 10\n",
       "INFO:root:Model 2 of 10                          \n",
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 111.57 MiB, increment: 4.22 MiB\n"
+      "peak memory: 109.96 MiB, increment: 3.93 MiB\n"
      ]
     },
     {
@@ -98,35 +98,7 @@
      "text": [
       "INFO:root:Performing DE test\n",
       "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 0.13s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                          \n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 119.37 MiB, increment: 7.43 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 0.43s\n",
+      "INFO:root:Done: 0.12s\n",
       "INFO:root:Fitting gene models\n",
       "INFO:root:Model 1 of 10\n",
       "INFO:root:Model 2 of 10                          \n",
@@ -145,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 144.22 MiB, increment: 30.38 MiB\n"
+      "peak memory: 118.01 MiB, increment: 7.24 MiB\n"
      ]
     },
     {
@@ -154,13 +126,13 @@
      "text": [
       "INFO:root:Performing DE test\n",
       "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 2.5s\n",
+      "INFO:root:Done: 0.58s\n",
       "INFO:root:Fitting gene models\n",
       "INFO:root:Model 1 of 10\n",
       "INFO:root:Model 2 of 10                          \n",
       "INFO:root:Model 3 of 10                          \n",
       "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                           \n",
+      "INFO:root:Model 5 of 10                          \n",
       "INFO:root:Model 6 of 10                          \n",
       "INFO:root:Model 7 of 10                          \n",
       "INFO:root:Model 8 of 10                          \n",
@@ -173,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 236.55 MiB, increment: 116.47 MiB\n"
+      "peak memory: 143.00 MiB, increment: 30.44 MiB\n"
      ]
     },
     {
@@ -182,17 +154,17 @@
      "text": [
       "INFO:root:Performing DE test\n",
       "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 6.0s\n",
+      "INFO:root:Done: 2.4s\n",
       "INFO:root:Fitting gene models\n",
       "INFO:root:Model 1 of 10\n",
       "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                           \n",
+      "INFO:root:Model 3 of 10                          \n",
       "INFO:root:Model 4 of 10                          \n",
       "INFO:root:Model 5 of 10                          \n",
       "INFO:root:Model 6 of 10                          \n",
       "INFO:root:Model 7 of 10                          \n",
       "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                           \n",
+      "INFO:root:Model 9 of 10                          \n",
       "INFO:root:Model 10 of 10                         \n",
       "                                                 \r"
      ]
@@ -201,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 392.66 MiB, increment: 263.92 MiB\n"
+      "peak memory: 234.04 MiB, increment: 115.95 MiB\n"
      ]
     },
     {
@@ -210,16 +182,44 @@
      "text": [
       "INFO:root:Performing DE test\n",
       "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 2.8e+02s\n",
+      "INFO:root:Done: 7.5s\n",
       "INFO:root:Fitting gene models\n",
       "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
+      "INFO:root:Model 2 of 10                         \n",
+      "INFO:root:Model 3 of 10                          \n",
+      "INFO:root:Model 4 of 10                          \n",
+      "INFO:root:Model 5 of 10                          \n",
+      "INFO:root:Model 6 of 10                          \n",
+      "INFO:root:Model 7 of 10                          \n",
+      "INFO:root:Model 8 of 10                          \n",
+      "INFO:root:Model 9 of 10                          \n",
+      "INFO:root:Model 10 of 10                         \n",
+      "                                                 \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 386.53 MiB, increment: 260.83 MiB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Performing DE test\n",
+      "INFO:root:Pre-calculating USU^T = K's ...\n",
+      "INFO:root:Done: 2.3e+02s\n",
+      "INFO:root:Fitting gene models\n",
+      "INFO:root:Model 1 of 10\n",
+      "INFO:root:Model 2 of 10                         \n",
       "INFO:root:Model 3 of 10                         \n",
-      "INFO:root:Model 4 of 10                         \n",
-      "INFO:root:Model 5 of 10                          \n",
+      "INFO:root:Model 4 of 10                          \n",
+      "INFO:root:Model 5 of 10                         \n",
       "INFO:root:Model 6 of 10                         \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
+      "INFO:root:Model 7 of 10                         \n",
+      "INFO:root:Model 8 of 10                         \n",
       "INFO:root:Model 9 of 10                         \n",
       "INFO:root:Model 10 of 10                        \n",
       "                                                \r"
@@ -229,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 2832.66 MiB, increment: 2686.30 MiB\n"
+      "peak memory: 2775.26 MiB, increment: 2628.93 MiB\n"
      ]
     },
     {
@@ -238,7 +238,7 @@
      "text": [
       "INFO:root:Performing DE test\n",
       "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 1.8e+03s\n",
+      "INFO:root:Done: 1.9e+03s\n",
       "INFO:root:Fitting gene models\n",
       "INFO:root:Model 1 of 10\n",
       "INFO:root:Model 2 of 10                          \n",
@@ -257,43 +257,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "peak memory: 10878.49 MiB, increment: 10691.08 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 6e+03s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                         \n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 24249.54 MiB, increment: 24038.36 MiB\n"
+      "peak memory: 10872.72 MiB, increment: 10691.07 MiB\n"
      ]
     }
    ],
    "source": [
-    "n_cell=[100,250,500,1000,1500,5000,10000,15000]\n",
+    "n_cell=[100,250,500,1000,1500,5000,10000]\n",
     "\n",
     "for i in n_cell:\n",
-    "    ff='Data/1_million_cells_100genes_counts_0.csv'\n",
+    "    ff='Data/10k_cells_100genes_counts_0.csv'\n",
     "    df_0 = pd.read_csv(ff,sep=',', index_col = 0, iterator=True)\n",
     "\n",
     "    df=df_0.get_chunk(i)\n",
@@ -326,23 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4.2336835861206055,\n",
-       " 4.436152935028076,\n",
-       " 4.9594433307647705,\n",
-       " 7.817316770553589,\n",
-       " 13.455059289932251,\n",
-       " 313.4578025341034,\n",
-       " 1946.3234176635742,\n",
-       " 6187.309741735458]"
+       "[3.78774356842041,\n",
+       " 4.402992248535156,\n",
+       " 5.221548795700073,\n",
+       " 7.5988616943359375,\n",
+       " 15.450058460235596,\n",
+       " 256.7932643890381,\n",
+       " 1967.3115754127502]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,24 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#memory=[186.78,228.36,302.66,544.00,842.41,4353.41,13918.13 ]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "memory=[111.57,119.37,144.22,236.55,392.66,2832.66,10878.49,24249.54 ]"
+    "memory=[109.96,118.01 ,143.00,234.04 , 386.53, 2775.26,10872.72 ]"
    ]
   },
   {
@@ -421,57 +381,50 @@
        "      <th>0</th>\n",
        "      <td>100</td>\n",
        "      <td>100</td>\n",
-       "      <td>4.233684</td>\n",
-       "      <td>111.57</td>\n",
+       "      <td>3.787744</td>\n",
+       "      <td>109.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>250</td>\n",
        "      <td>100</td>\n",
-       "      <td>4.436153</td>\n",
-       "      <td>119.37</td>\n",
+       "      <td>4.402992</td>\n",
+       "      <td>118.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>500</td>\n",
        "      <td>100</td>\n",
-       "      <td>4.959443</td>\n",
-       "      <td>144.22</td>\n",
+       "      <td>5.221549</td>\n",
+       "      <td>143.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1000</td>\n",
        "      <td>100</td>\n",
-       "      <td>7.817317</td>\n",
-       "      <td>236.55</td>\n",
+       "      <td>7.598862</td>\n",
+       "      <td>234.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1500</td>\n",
        "      <td>100</td>\n",
-       "      <td>13.455059</td>\n",
-       "      <td>392.66</td>\n",
+       "      <td>15.450058</td>\n",
+       "      <td>386.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5000</td>\n",
        "      <td>100</td>\n",
-       "      <td>313.457803</td>\n",
-       "      <td>2832.66</td>\n",
+       "      <td>256.793264</td>\n",
+       "      <td>2775.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>10000</td>\n",
        "      <td>100</td>\n",
-       "      <td>1946.323418</td>\n",
-       "      <td>10878.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>15000</td>\n",
-       "      <td>100</td>\n",
-       "      <td>6187.309742</td>\n",
-       "      <td>24249.54</td>\n",
+       "      <td>1967.311575</td>\n",
+       "      <td>10872.72</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -479,14 +432,13 @@
       ],
       "text/plain": [
        "   n.cells  n.genes       time_s  Memory_MiB\n",
-       "0      100      100     4.233684      111.57\n",
-       "1      250      100     4.436153      119.37\n",
-       "2      500      100     4.959443      144.22\n",
-       "3     1000      100     7.817317      236.55\n",
-       "4     1500      100    13.455059      392.66\n",
-       "5     5000      100   313.457803     2832.66\n",
-       "6    10000      100  1946.323418    10878.49\n",
-       "7    15000      100  6187.309742    24249.54"
+       "0      100      100     3.787744      109.96\n",
+       "1      250      100     4.402992      118.01\n",
+       "2      500      100     5.221549      143.00\n",
+       "3     1000      100     7.598862      234.04\n",
+       "4     1500      100    15.450058      386.53\n",
+       "5     5000      100   256.793264     2775.26\n",
+       "6    10000      100  1967.311575    10872.72"
       ]
      },
      "execution_count": 7,
