Simulate bigdata and compare computation performance

--- a/Simulation/spatialDE_simulate.ipynb
+++ b/Simulation/spatialDE_simulate.ipynb
@@ -35,233 +35,7 @@
    "source": [
     "nc=[]\n",
     "tt =[]\n",
-    "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/SpatialDE/base.py:278: RuntimeWarning: divide by zero encountered in log\n",
-      "  max_ll = -0.5 * ( n * np.log(max_s2_e_hat) + sum1 / max_s2_e_hat + n * np.log(2 * np.pi) )\n",
-      "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/SpatialDE/base.py:278: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  max_ll = -0.5 * ( n * np.log(max_s2_e_hat) + sum1 / max_s2_e_hat + n * np.log(2 * np.pi) )\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 0.041s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                         \n",
-      "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/SpatialDE/base.py:399: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
-      "of pandas will change to not sort by default.\n",
-      "\n",
-      "To accept the future behavior, pass 'sort=True'.\n",
-      "\n",
-      "To retain the current behavior and silence the warning, pass sort=False\n",
-      "\n",
-      "  results = pd.concat(results).reset_index(drop=True)\n",
-      "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in greater\n",
-      "  return (self.a < x) & (x < self.b)\n",
-      "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:879: RuntimeWarning: invalid value encountered in less\n",
-      "  return (self.a < x) & (x < self.b)\n",
-      "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/scipy/stats/_distn_infrastructure.py:1738: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  cond2 = (x >= self.b) & cond0\n",
-      "/home/covo/anaconda3/envs/py3+R/lib/python3.6/site-packages/SpatialDE/util.py:32: RuntimeWarning: invalid value encountered in greater\n",
-      "  counts = sp.array([(pv > i).sum() for i in sp.arange(0, 0.9, 0.01)])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 109.96 MiB, increment: 3.93 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 0.12s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                         \n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 118.01 MiB, increment: 7.24 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 0.58s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                         \n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 143.00 MiB, increment: 30.44 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 2.4s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                         \n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 234.04 MiB, increment: 115.95 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 7.5s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                         \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                         \n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 386.53 MiB, increment: 260.83 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 2.3e+02s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                         \n",
-      "INFO:root:Model 3 of 10                         \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                         \n",
-      "INFO:root:Model 6 of 10                         \n",
-      "INFO:root:Model 7 of 10                         \n",
-      "INFO:root:Model 8 of 10                         \n",
-      "INFO:root:Model 9 of 10                         \n",
-      "INFO:root:Model 10 of 10                        \n",
-      "                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 2775.26 MiB, increment: 2628.93 MiB\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Performing DE test\n",
-      "INFO:root:Pre-calculating USU^T = K's ...\n",
-      "INFO:root:Done: 1.9e+03s\n",
-      "INFO:root:Fitting gene models\n",
-      "INFO:root:Model 1 of 10\n",
-      "INFO:root:Model 2 of 10                          \n",
-      "INFO:root:Model 3 of 10                          \n",
-      "INFO:root:Model 4 of 10                          \n",
-      "INFO:root:Model 5 of 10                          \n",
-      "INFO:root:Model 6 of 10                          \n",
-      "INFO:root:Model 7 of 10                          \n",
-      "INFO:root:Model 8 of 10                          \n",
-      "INFO:root:Model 9 of 10                          \n",
-      "INFO:root:Model 10 of 10                         \n",
-      "                                                 \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 10872.72 MiB, increment: 10691.07 MiB\n"
-     ]
-    }
-   ],
-   "source": [
+    "import time\n",
     "n_cell=[100,250,500,1000,1500,5000,10000]\n",
     "\n",
     "for i in n_cell:\n",
