--- a/Analysis/Trendsceek/Breast_Career_spatial_script.ipynb
+++ b/Analysis/Trendsceek/Breast_Career_spatial_script.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "for (i in 1:4){\n",
-    "Rep <-read.table(paste0('../Data/Layer',i,'1_BC_count_matrix-1.tsv'),sep=\"\\t\",header = T,row.names = 1)\n",
+    "Rep <-read.table(paste0('../Data/Layer',i,'_BC_count_matrix-1.tsv'),sep=\"\\t\",header = T,row.names = 1)\n",
     "Rep <-t(Rep)\n",
     "\n",
     "Rep<-genefilter_exprmat(Rep ,min.expr=5,min.ncells.expr = 3)\n",
@@ -99,7 +99,7 @@
     "\n",
     "df_sig=data.frame(sig_gene=sig_genes)\n",
     "\n",
-    "write.csv(df_sig,paste0('results/BC',i,'_sig_gene_list.csv')\n",
+    "write.csv(df_sig,paste0('results/BC_Layer',i,'.csv')\n",
     "}"
    ]
   },
