--- a/Analysis/Trendsceek/merfish_spatial_script.ipynb
+++ b/Analysis/Trendsceek/merfish_spatial_script.ipynb
@@ -125,7 +125,7 @@
    },
    "outputs": [],
    "source": [
-    "info<-read.csv(\"Data/middle_sample_info.csv\",header = T,row.names = 1)\n",
+    "info<-read.csv(\"../Data/middle_sample_info.csv\",header = T,row.names = 1)\n",
     "corr<-data.frame(x=info$abs_X,y=info$abs_Y)"
    ]
   },
