--- a/Analysis/Trendsceek/Seqfish_hippo_spatial_script.ipynb
+++ b/Analysis/Trendsceek/Seqfish_hippo_spatial_script.ipynb
@@ -61,7 +61,7 @@
     "i=43\n",
     "ff=paste0('Data/field_',i,'_counts_0.csv')\n",
     "df=read.csv(ff,header = T,row.names=2)\n",
-    "data=df[2:dim(data)[2]]\n",
+    "data=df[2:dim(df)[2]]\n",
     "counts=t(data)\n",
     "win.counts=t(apply(counts,1,winsorize,4))\n",
     "Rep<-genefilter_exprmat(counts,min.expr=5,min.ncells.expr = 3)\n",
@@ -81,7 +81,7 @@
     "pp2plot=pp_select(pp,sub_pp)\n",
     "\n",
     "#t0<-Sys.time() \n",
-    "trendstat_list = trendsceek_test(pp)\n",
+    "trendstat_list = trendsceek_test(pp,nrand=10000)\n",
     "#t1<-Sys.time()\n",
     "\n",
     "sig_list = extract_sig_genes(trendstat_list, alpha=0.05)\n",
